--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ body {
     color: white;
     border-radius: 20px;
     text-decoration: none;
+    text-align: center;
 }
 
 .project a:hover {
