--- a/style.css
+++ b/style.css
@@ -44,14 +44,37 @@ body {
 
 .main_content {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
     width: 70%;
-    height: auto;
     margin: auto;
     margin-bottom: 300px;
+    gap: 40px;
 }
 
-.main_content img {
+.content-left {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+}
+
+.content-right {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    padding-top: 50px;
+}
+
+.profile-photo {
+    width: 400px;
+    height: 400px;
+    border-radius: 75%;
+    margin-top: 20px;
+    filter: none;
+}
+
+.socials-icons {
     width: 35px;
     height: 35px;
     filter: brightness(0) saturate(100%) invert(33%) sepia(39%) saturate(5838%) hue-rotate(337deg) brightness(119%) contrast(101%);
@@ -122,6 +145,11 @@ body {
 
 .service p {
     color: white;
+}
+
+.skills-icons {
+    display: flex;
+    gap: 30px; 
 }
 
 .projects-box {
